elimination of validator errors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </li>
                 </ul>
             </nav>
-            <button id="btn-popup" class="header__btn btn">Start Reading</button>
+            <button class="header__btn btn btn-popup">Start Reading</button>
 
             <div class="menu">
                 <button class="menu-open">
@@ -57,7 +57,7 @@
                             <p class="slider__text">TreeBooks is Africa foremost online book Store where
                                 Authors can make their Books available as ebook or
                                 audio Books to reach Millions of Buyers worldwide</p>
-                            <button id="btn-popup" class="slider__btn btn">Access books</button>
+                            <button class="slider__btn btn btn-popup">Access books</button>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
                         <div class="slider__content">
                             <h2 class="slider__title">bella</h2>
                             <p class="slider__text">bella</p>
-                            <button id="btn-popup" class="slider__btn btn">bella</button>
+                            <button class="slider__btn btn btn-popup">bella</button>
                         </div>
                     </div>
                 </div>
@@ -75,7 +75,7 @@
                         <div class="slider__content">
                             <h2 class="slider__title">Test</h2>
                             <p class="slider__text">text text text</p>
-                            <button id="btn-popup" class="slider__btn btn">Test</button>
+                            <button class="slider__btn btn btn-popup">Test</button>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         book
                         categories. 1000+ books are published by different authors everyday. Buy your favourite books on
                         TreeBooks Today.</p>
-                    <button id="btn-popup" class="find__btn btn" type="button">Find out more</button>
+                    <button class="find__btn btn btn-popup" type="button">Find out more</button>
                 </div>
 
             </div>
@@ -185,7 +185,7 @@
                         </div>
                     </div>
                 </div>
-                <button id="btn-popup" class="recommended__btn" type="button">See more </button>
+                <button class="recommended__btn btn-popup" type="button">See more </button>
             </div>
         </section>
 
@@ -210,7 +210,7 @@
                             books
                             are published by different authors everyday. Buy your favourite books on TreeBooks Today.
                         </p>
-                        <button id="btn-popup" class="featured__btn btn">Read book</button>
+                        <button class="featured__btn btn btn-popup">Read book</button>
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                         book
                         categories. 1000+ books are published by different authors everyday. Buy your favourite books on
                         TreeBooks Today.</p>
-                    <button id="btn-popup" class="faq__btn btn" type="button">Read FAQ</button>
+                    <button class="faq__btn btn btn-popup" type="button">Read FAQ</button>
                 </div>
 
             </div>
@@ -239,7 +239,7 @@
                         categories. 1000+ books are published by different authors everyday. Buy your favourite
                         books on
                         TreeBooks Today.</p>
-                    <button id="btn-popup" class="publish__info-btn btn info-box__btn">Publish a book</button>
+                    <button class="publish__info-btn btn info-box__btn btn-popup">Publish a book</button>
                 </div>
                 <div class="publish__img-block">
                     <img src="./images/publish/img.jpg" alt="img cover" class="publish__img">
@@ -277,7 +277,7 @@
                                 book categories...</p>
                         </div>
 
-                        <button id="btn-popup" class="stories__btn btn">Read Book</button>
+                        <button class="stories__btn btn btn-popup">Read Book</button>
                     </div>
                     <div class="stories__item">
                         <div class="stories__item-info">
@@ -286,7 +286,7 @@
                                 popular
                                 book categories...</p>
                         </div>
-                        <button id="btn-popup" class="stories__btn btn">Read Book</button>
+                        <button class="stories__btn btn btn-popup">Read Book</button>
                     </div>
                     <div class="stories__item">
                         <div class="stories__item-info">
@@ -295,7 +295,7 @@
                                 popular
                                 book categories...</p>
                         </div>
-                        <button id="btn-popup" class="stories__btn btn">Read Book</button>
+                        <button class="stories__btn btn btn-popup">Read Book</button>
                     </div>
                     <div class="stories__item">
                         <div class="stories__item-info">
@@ -304,7 +304,7 @@
                                 popular
                                 book categories...</p>
                         </div>
-                        <button id="btn-popup" class="stories__btn btn">Read Book</button>
+                        <button class="stories__btn btn btn-popup">Read Book</button>
                     </div>
                 </div>
             </div>
@@ -316,7 +316,7 @@
                     <p class="free__info-text info-box__text">Get access by subcribing to our newsletter. Jump start
                         your book reading by quickly check through the popular book categories...</p>
                     <form class="form-email">
-                        <input class="form-email__input-type free__input-type" type="email" name="email" id="email"
+                        <input class="form-email__input-type free__input-type" type="email" name="email"
                             placeholder="Enter email address...">
                         <input class="form-email__input-btn" type="submit" value="Get free books">
                     </form>
@@ -348,7 +348,7 @@
                     <p class="section-text faq__text">Jump start your book reading by quickly check through the popular
                         book categories. 1000+ books are published by different authors everyday. Buy your favourite
                         books on TreeBooks Today..</p>
-                    <button id="btn-popup" class="faq__btn btn">Read FAQ</button>
+                    <button class="faq__btn btn btn-popup">Read FAQ</button>
                 </div>
             </div>
         </section>
@@ -366,7 +366,7 @@
             </div>
 
             <form class="popup__form">
-                <input class="popup__label-email" type="email" name="email" id="email" placeholder="Enter your email">
+                <input class="popup__label-email" type="email" name="email" placeholder="Enter your email">
                 <input class="popup__label-password" type="password" name="password" id="password"
                     placeholder="Enter your password">
                 <button type="submit" class="popup__btn btn">Log in</button>
