added anchor links for nav

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <nav class="header__nav">
                 <ul class="header__nav-items">
                     <li class="header__nav-item">
-                        <a href="#" class="header__nav-link">What we do</a>
+                        <a href="#find" class="header__nav-link">What we do</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="#" class="header__nav-link">Blog</a>
+                        <a href="#stories" class="header__nav-link">Blog</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="#" class="header__nav-link">Get help</a>
+                        <a href="#faq" faq class="header__nav-link">Get help</a>
                     </li>
                     <li class="header__nav-item">
-                        <a href="#" class="header__nav-link">Publish</a>
+                        <a href="#publish" class="header__nav-link">Publish</a>
                     </li>
                 </ul>
             </nav>
@@ -47,7 +47,7 @@
     </header>
 
     <main class="main">
-        <section class="hero">
+        <section id="hero" class="hero">
             <div class="slider">
                 <div class="slider__slide slide1 slider__slide_active">
                     <div class="container">
@@ -93,7 +93,7 @@
                 </div>
             </div>
         </section>
-        <section class="find">
+        <section id="find" class="find">
             <div class="container">
                 <div class="content-box find__content-box">
                     <h3 class="section-title find__title">Why we love books</h3>
@@ -107,7 +107,7 @@
             </div>
         </section>
 
-        <section class="recommended">
+        <section id="recommended" class="recommended">
             <div class="container">
                 <div class="content-box recommended__content-box">
                     <h3 class="section-title recommended__title">Recommended books for you</h3>
@@ -189,7 +189,7 @@
             </div>
         </section>
 
-        <section class="featured">
+        <section id="featured" class="featured">
             <div class="container">
                 <div class="featured__item-box">
                     <div class="featured__image-block">
@@ -228,7 +228,7 @@
 
             </div>
         </section>
-        <section class="publish">
+        <section id="publish" class="publish">
             <div class="publish__items section-items">
                 <div class="publish__info-box info-box">
                     <h3 class="publish__info-title info-box__title">Express your creativity</h3>
@@ -265,7 +265,7 @@
             </div>
         </section>
 
-        <section class="stories">
+        <section id="stories" class="stories">
             <div class="container">
                 <h3 class="section-title stories__section-title">Read our many stories</h3>
                 <div class="stories__items">
@@ -326,7 +326,7 @@
                 </div>
             </div>
         </section>
-        <section class="partners">
+        <section id="partners" class="partners">
             <div class="container">
                 <div class="content-box partners__content-box">
                     <h3 class="section-title partners__title">Our partners in the impact quest</h3>
@@ -341,7 +341,7 @@
                 </div>
             </div>
         </section>
-        <section class="faq">
+        <section id="faq" class="faq">
             <div class="container">
                 <div class="content-box faq__content-box">
                     <h3 class="section-title faq_title">Still not sure?</h3>
@@ -353,7 +353,7 @@
             </div>
         </section>
     </main>
-    <footer class="footer">
+    <footer id="footer" class="footer">
         <div class="container">
             <p class="footer__text">Treebooks 2019, All rights reserved.</p>
         </div>
