fix lighthouse images errors

--- a/index.html
+++ b/index.html
@@ -117,7 +117,26 @@
 
                 <div class="recommended__items">
                     <div class="recommended__item">
-                        <img src="./images/recommended/1.jpg" alt="cover book" class="recommended__item-img">
+                        <img class="recommended__item-img" width="123" height="184" src="./images/recommended/1.jpg"
+                            alt="cover book">
+                        <h3 class="recommended__item-title">The Mind Connection</h3>
+                        <p class="recommended__item-autor">Joyce Meyer</p>
+                        <div class="stars recommended__stars">
+                            <img class="recommended__star-img star__img" width="15" height="14"
+                                src="./icons/recommended/star-icon.svg" alt="star">
+                            <img class="recommended__star-img star__img" width="15" height="14"
+                                src="./icons/recommended/star-icon.svg" alt="star">
+                            <img class="recommended__star-img star__img" width="15" height="14"
+                                src="./icons/recommended/star-icon.svg" alt="star">
+                            <img class="recommended__star-img star__img" width="15" height="14"
+                                src="./icons/recommended/star-icon.svg" alt="star">
+                            <img class="recommended__star-img star__img" width="15" height="14"
+                                src="./icons/recommended/star-icon.svg" alt="star">
+                        </div>
+                    </div>
+                    <div class="recommended__item">
+                        <img class="recommended__item-img" width="123" height="184" src="./images/recommended/1.jpg"
+                            alt="cover book">
                         <h3 class="recommended__item-title">The Mind Connection</h3>
                         <p class="recommended__item-autor">Joyce Meyer</p>
                         <div class="stars recommended__stars">
@@ -134,7 +153,8 @@
                         </div>
                     </div>
                     <div class="recommended__item">
-                        <img src="./images/recommended/1.jpg" alt="cover book" class="recommended__item-img">
+                        <img class="recommended__item-img" width="123" height="184" src="./images/recommended/1.jpg"
+                            alt="cover book">
                         <h3 class="recommended__item-title">The Mind Connection</h3>
                         <p class="recommended__item-autor">Joyce Meyer</p>
                         <div class="stars recommended__stars">
@@ -151,24 +171,8 @@
                         </div>
                     </div>
                     <div class="recommended__item">
-                        <img src="./images/recommended/1.jpg" alt="cover book" class="recommended__item-img">
-                        <h3 class="recommended__item-title">The Mind Connection</h3>
-                        <p class="recommended__item-autor">Joyce Meyer</p>
-                        <div class="stars recommended__stars">
-                            <img src="./icons/recommended/star-icon.svg" alt="star"
-                                class="recommended__star-img star__img">
-                            <img src="./icons/recommended/star-icon.svg" alt="star"
-                                class="recommended__star-img star__img">
-                            <img src="./icons/recommended/star-icon.svg" alt="star"
-                                class="recommended__star-img star__img">
-                            <img src="./icons/recommended/star-icon.svg" alt="star"
-                                class="recommended__star-img star__img">
-                            <img src="./icons/recommended/star-icon.svg" alt="star"
-                                class="recommended__star-img star__img">
-                        </div>
-                    </div>
-                    <div class="recommended__item">
-                        <img src="./images/recommended/1.jpg" alt="cover book" class="recommended__item-img">
+                        <img class="recommended__item-img" width="123" height="184" src="./images/recommended/1.jpg"
+                            alt="cover book">
                         <h3 class="recommended__item-title">The Mind Connection</h3>
                         <p class="recommended__item-autor">Joyce Meyer</p>
                         <div class="stars recommended__stars">
@@ -193,17 +197,23 @@
             <div class="container">
                 <div class="featured__item-box">
                     <div class="featured__image-block">
-                        <img src="./images/featured/1.jpg" alt="image book" class="featured__img">
+                        <img class="featured__img" width="238" height="354" src="./images/featured/1.jpg"
+                            alt="image book">
                     </div>
                     <div class="featured__info-block">
                         <span class="featured__subtitle">Featured Book of the week</span>
                         <h3 class="featured__title">The subtle art of not giving a fuck</h3>
                         <div class="stars featured__stars">
-                            <img src="./icons/featured/star-icon2.svg" alt="star" class="featured__star-img star__img">
-                            <img src="./icons/featured/star-icon2.svg" alt="star" class="featured__star-img star__img">
-                            <img src="./icons/featured/star-icon2.svg" alt="star" class="featured__star-img star__img">
-                            <img src="./icons/featured/star-icon2.svg" alt="star" class="featured__star-img star__img">
-                            <img src="./icons/featured/star-icon2.svg" alt="star" class="featured__star-img star__img">
+                            <img class="featured__star-img star__img" width="19" height="18"
+                                src="./icons/featured/star-icon2.svg" alt="star">
+                            <img class="featured__star-img star__img" width="19" height="18"
+                                src="./icons/featured/star-icon2.svg" alt="star">
+                            <img class="featured__star-img star__img" width="19" height="18"
+                                src="./icons/featured/star-icon2.svg" alt="star">
+                            <img class="featured__star-img star__img" width="19" height="18"
+                                src="./icons/featured/star-icon2.svg" alt="star">
+                            <img class="featured__star-img star__img" width="19" height="18"
+                                src="./icons/featured/star-icon2.svg" alt="star">
                         </div>
                         <p class="featured__text">
                             Jump start your book reading by quickly check through the popular book categories. 1000+
@@ -242,7 +252,7 @@
                     <button class="publish__info-btn btn info-box__btn btn-popup">Publish a book</button>
                 </div>
                 <div class="publish__img-block">
-                    <img src="./images/publish/img.jpg" alt="img cover" class="publish__img">
+                    <img class="publish__img" width="458" height="377" src="./images/publish/img.jpg" alt="img cover">
                 </div>
             </div>
         </section>
@@ -322,7 +332,7 @@
                     </form>
                 </div>
                 <div class="free__img-block">
-                    <img src="./images/free/1.jpg" alt="img cover" class="free__img">
+                    <img class="free__img" width="526" height="435" src="./images/free/1.jpg" alt="img cover">
                 </div>
             </div>
         </section>
@@ -333,10 +343,14 @@
                     <p class="section-text partners__text">JJump start your book reading by quickly check through the
                         popular book categories. 1000+ books are published by different authors everyday.</p>
                     <div class="partners__items">
-                        <img src="./images/partners/1.svg" alt="logo company" class="partners__logo">
-                        <img src="./images/partners/2.svg" alt="logo company" class="partners__logo">
-                        <img src="./images/partners/3.svg" alt="logo company" class="partners__logo">
-                        <img src="./images/partners/4.svg" alt="logo company" class="partners__logo">
+                        <img class="partners__logo" width="128" height="63" src="./images/partners/1.svg"
+                            alt="logo company" ">
+                        <img class=" partners__logo" width="128" height="63" src=" ./images/partners/2.svg"
+                            alt="logo company">
+                        <img class="partners__logo" width="128" height="63" src="./images/partners/3.svg"
+                            alt="logo company">
+                        <img class="partners__logo" width="128" height="63" src="./images/partners/4.svg"
+                            alt="logo company">
                     </div>
                 </div>
             </div>
